--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,49 +1,24 @@
-<link rel="stylesheet" href="{{ site.url }}/assets/fonts/fonts.css"/>
-<link rel="stylesheet" href="{{ site.url }}/assets/style.css"/>
-<link rel="stylesheet" href="{{ site.url }}/assets/js/lity.min.css"/>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-{% if site.favicon != nil %}
-<link rel='shortcut icon' type='image/x-icon' href='{{ site.favicon }}' />
-{% endif %}
-
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<meta property="og:site_name" content="{{ site.title }}" />
-<meta 
-    property="og:title"
-    content="
-        {% if page.title != nil %}
-            {{page.title}}
-        {% else %}
-            {{site.title}}
-        {% endif %}
-    " 
-/>
-{% if page.og_description != nil %}
-    <meta property="og:description" content="{{ page.og_description }}" />
-{% endif %}
-<meta property="og:url" content="{{ site.url }}/{{ page.url }}" />
-{% if page.og_type != nil %}
-    <meta property="og:type" content="{{ page.og_type }}" />
-{% else %}
-    <meta property="og:type" content="article" />
-{% endif %}
-{% if page.og_image != nil %}
-    <meta property="og:image" content="{{ site.url }}/{{ page.og_image }}" />
-    <meta property="og:image:secure_url" content="{{ site.url }}/{{ page.og_image }}" />
-{% endif %}
-{% if page.fb_app_id != nil %}
-    <meta property="fb:app_id" content="{{ page.fb_app_id }}" />
-{% else if site.fb_app_id != nil %}
-    <meta property="fb:app_id" content="{{ site.fb_app_id }}" />
-{% endif %}
-
-
-<title>
-    {% if page.title != nil %}
-        {{page.title}}
+  <title>
+    {% if page.title %}
+      {{ page.title }}
     {% else %}
-        {{site.title}}
+      {{ site.title }}
     {% endif %}
-</title>
+  </title>
+
+  {% seo title=false %}
+  {% feed_meta %}
+
+  <link rel="shortcut icon" type="image/x-icon" href="/{{ site.favicon | relative_url }}" />
+  <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
+  {% if site.theme_config.appearance_toggle %}
+    {% include toggle_theme_js.html %}
+  {% endif %}
+
+  {%- include custom_head.html -%}
+</head>
